# maelstrom

./: CMakeLists.txt
include/maelstrom/: base.hpp  maelstrom.hpp  mat.hpp  math.hpp  matrix.hpp  meta.hpp  utility.hpp  vec.hpp  vector.hpp
tests/: meta.cpp  vector.cpp
